--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,11 +21,13 @@ jobs:
       - name: Checkout your repository using git
         uses: actions/checkout@v4
       - name: Install, build, and upload your site output
-        uses: withastro/action@v4
-        # with:
-              # path: . # The root location of your Astro project inside the repository. (optional)
-              # node-version: 22 # The specific version of Node that should be used to build your site. Defaults to 22. (optional)
-              # package-manager: pnpm@latest # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
+        uses: withastro/action@v2
+      - name: Create .nojekyll file
+        run: touch build/.nojekyll
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: ./dist
 
   deploy:
     needs: build
